tests/frontend/fail/emptystorage/mapval.act
constructor of ReadMapping
interface constructor(uint _x, uint _y)

creates
  uint                x := _x
  uint                y := _y
  mapping(uint=>uint) m := [_x := y]
